codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_status_line_labels.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
GPT-6.1-Sol
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  sol61·med·sol61 med                                                           "


GPT-6-Astra
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  ast6·hig·ast6 hig                                                             "


GPT-6-Luna
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  lun6·xhi·lun6 xhi                                                             "


GPT-5.6 Luna
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  lun56·low·lun56 low                                                           "


GPT-5.2
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  52·def·52 def                                                                 "


Luna Reserve
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  lun·dee·lun dee                                                               "


Custom.V2
"                                                                                "
"                                                                                "
"» Ask ASM to do anything                                                        "
"                                                                                "
"  cus2·ult·cus2 ult                                                             "


Placeholder preview
cod52·med·cod52 med
