codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completion_after_plain_answer.snap
---
source: tui/src/chatwidget/tests/completion_styling_tests.rs
expression: text
---
• The change is ready.

  Worked for [duration] • [completion time] • 12.4k in • 9.8k cc • 820|600 ou •
  019abc12-3456-7890-abcd-1234567890ab
